feat: добавить блока навигации

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url(./vendor/fonts/coco-sharp-trial.css);
 @import url(./blocks/body/body.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/navigation/navigation.css);
 
 
 
