--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @import url(./blocks/body/body.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/navigation/navigation.css);
+@import url(./blocks/main/main.css);
+@import url(./blocks/about-as/about-as.css)
 
 
 
