--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/navigation/navigation.css);
 @import url(./blocks/main/main.css);
-@import url(./blocks/about-as/about-as.css)
+@import url(./blocks/about-as/about-as.css);
+@import url(./blocks/services/services.css);
 
 
 
