feat: добавить секцию с ценами

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,5 @@
 @import url(./blocks/main/main.css);
 @import url(./blocks/about-as/about-as.css);
 @import url(./blocks/services/services.css);
-
-
+@import url(./blocks/prices/prices.css);
 
