--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@
 @import url(./blocks/about-as/about-as.css);
 @import url(./blocks/services/services.css);
 @import url(./blocks/prices/prices.css);
+@import url(./blocks/promotions/promotions.css);
 
