--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@
 @import url(./blocks/services/services.css);
 @import url(./blocks/prices/prices.css);
 @import url(./blocks/promotions/promotions.css);
+@import url(./blocks/blog/blog.css);
 
