--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 @import url(./blocks/promotions/promotions.css);
 @import url(./blocks/blog/blog.css);
 @import url(./blocks/contacts/contacts.css);
+@import url(./blocks/address/address.css);
+@import url(./blocks/footer/footer.css);
 
 /* * {
   outline: 1px solid green;
