--- a/src/blocks/about-as/about-as.css
+++ b/src/blocks/about-as/about-as.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 2;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,7 +112,7 @@
 
 @media screen and (max-width: 600px) {
   .about-as {
-    padding-top: 93px;
+    margin-top: 30px;
   }
 }
 
