--- a/src/blocks/address/address.css
+++ b/src/blocks/address/address.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: calc(100vh - 118px);
   position: relative;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 600px) {
   .address {
-    padding-top: 93px;
+    margin-top: 30px;
     min-height: calc(100dvh - 133px);
   }
 
