--- a/src/blocks/blog/blog.css
+++ b/src/blocks/blog/blog.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 1;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,6 +13,6 @@
 
 @media screen and (max-width: 600px) {
   .blog {
-    padding-top: 93px;
+    margin-top: 30px;
   }
 }
