--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 2;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -133,7 +133,7 @@
 
 @media screen and (max-width: 600px) {
   .contacts {
-    padding-top: 93px;
+    margin-top: 30px;
   }
 
   .contacts__title {
