--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
-  padding-top: 78px;
+  margin-top: 40px;
 }
 
 .prices__container {
@@ -27,7 +27,6 @@
 .prices__title {
   font-size: 26px;
   margin: 20px 0 0;
-  color: #E42A24;
   scroll-margin-top: 90px;
 }
 
@@ -58,7 +57,7 @@
 
 @media screen and (max-width: 600px) {
   .prices {
-    padding-top: 93px;
+    margin-top: 30px;
   }
 
   .prices__title {
