--- a/src/blocks/promotions/promotions.css
+++ b/src/blocks/promotions/promotions.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 1;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -88,7 +88,7 @@
 
 @media screen and (max-width: 600px) {
   .promotions {
-    padding-top: 93px;
+    margin-top: 30px;
   }
 
   .list__item {
