--- a/src/blocks/services/services.css
+++ b/src/blocks/services/services.css
@@ -3,7 +3,7 @@
   min-height: calc(100vh - 118px);
   position: relative;
   z-index: 1;
-  padding-top: 78px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,8 +112,7 @@
 
 @media screen and (max-width: 600px) {
   .services {
-    min-height: calc(100dvh - 133px);
-    padding-top: 93px;
+    margin-top: 30px;
   }
 
   .services__grid {
