--- a/src/blocks/about-as/about-as.css
+++ b/src/blocks/about-as/about-as.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #EEE;
 }
 
 .about-as__container {
