--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -17,14 +17,16 @@
 
 .main__background {
   background-image: url(../../images/background-main.jpg);
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   opacity: .2;
-  position: absolute;
-  z-index: -1;
+  position: fixed;
+  z-index: 1;
+  top: 78px;
+  left: 0;
 }
 
 @media screen and (max-width: 600px) {
