--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 @import url(./blocks/blog/blog.css);
 @import url(./blocks/contacts/contacts.css);
 @import url(./blocks/address/address.css);
+@import url(./blocks/buttonUp/buttonUp.css);
 @import url(./blocks/footer/footer.css);
 
 * {
