--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -1,7 +1,6 @@
 .prices {
   width: 100%;
   height: 100%;
-  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -10,25 +9,56 @@
   z-index: 1;
   margin-top: 40px;
   background-color: #EEE;
-}
-
-.prices__container {
-  width: 100%;
-  max-width: 1280px;
-  scroll-margin-top: 100px;
-  margin-bottom: 40px;
+  padding-bottom: 30px;
 }
 
 .prices__type-work {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .prices__title {
   font-size: 26px;
-  margin: 20px 0 0;
-  scroll-margin-top: 90px;
+  line-height: 30px;
+  font-weight: 900;
+  height: 30px;
+  border: none;
+  border-radius: 8px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  transition: .1s ease;
+  scroll-margin-top: 100px;
+}
+
+.prices__title:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+
+.prices__title-check {
+  width: 22px;
+  height: 22px;
+  opacity: .5;
+  transition: .3s ease;
+  background-image: url(../../images/back-img.png);
+  background-position: center;
+  background-size: 15px;
+  background-repeat: no-repeat;
+  z-index: 2;
+  rotate: 180deg;
+  margin: 10px;
+}
+
+.prices__title-check_clicked {
+  rotate: 0deg;
+}
+
+.prices__table-container {
+  overflow: hidden;
 }
 
 .prices__table {
@@ -36,12 +66,21 @@
   margin: 0;
   width: 500px;
   margin-bottom: 10px;
+  transition: .3s ease;
+  transform: translateY(-120%);
+  height: 0;
+}
+
+.prices__table_visible {
+  transform: translateY(0);
+  height: 100%;
 }
 
 .prices__table-name {
   font-size: 14px;
   display: grid;
-  grid-template-columns: 375px 120px;
+  grid-template-columns: 355px 120px;
+  column-gap: 20px;
   border-bottom: 1px solid #000;
   padding: 10px 5px 2px;
 }
@@ -51,6 +90,10 @@
 }
 
 @media screen and (max-width: 800px) {
+  .prices__type-work {
+    margin-bottom: 10px;
+  }
+
   .prices__title {
     font-size: 22px;
   }
@@ -59,6 +102,7 @@
 @media screen and (max-width: 600px) {
   .prices {
     margin-top: 30px;
+    padding-bottom: 20px;
   }
 
   .prices__title {
@@ -71,15 +115,8 @@
   }
 
   .prices__table-name {
-    grid-template-columns: 1fr 120px;
     margin: 0 20px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .prices__table-name {
     grid-template-columns: 3fr 1fr;
-    font-size: 12px;
     padding: 8px 5px 2px;
   }
 }
