--- a/src/blocks/promotions/promotions.css
+++ b/src/blocks/promotions/promotions.css
@@ -13,52 +13,50 @@
 
 .list {
   padding: 20px 0;
-  width: 100%;
+  width: calc(100% - 60px);
   max-width: 1280px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   margin: 0;
   scroll-margin-top: 100px;
+  gap: 30px;
 }
 
 .list__item {
-  display: grid;
-  grid-template-columns: 250px 1fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
-  "img title"
-  "img text";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  gap: 30px;
 }
 
 .list__item-image {
-  grid-area: img;
-  width: 200px;
-  height: 200px;
-  margin: 10px 20px 10px 30px;
+  width: 300px;
+  height: 300px;
   border-radius: 20px;
   object-fit: cover;
   will-change: transform;
   transform-origin: center center;
   transition: all .3s ease;
-  cursor: pointer;
+  /* cursor: pointer; */
   background-color: #999;
 }
 
-.list__item-image:hover {
+/* .list__item-image:hover {
   transform: scale(1.05);
   opacity: 1;
   box-shadow: 0 0 5px 5px #AAA;
-}
+} */
 
 .list__item-title {
-  grid-area: title;
-  margin: 15px 20px 15px 0;
-  font-size: 26px;
+  margin: 0;
+  font-size: 22px;
+  text-align: center;
 }
 
 .list__item-description {
-  grid-area: text;
-  margin: 0 30px 0 0;
   display: flex;
   flex-direction: column;
 }
@@ -70,19 +68,17 @@
 
 @media screen and (max-width: 850px) {
   .list__item {
-    grid-template-columns: 220px 1fr;
-    grid-template-rows: auto 1fr;
+    width: 250px;
+    gap: 20px;
   }
 
   .list__item-title {
-    font-size: 22px;
-    margin: 10px 30px 10px 0;
+    font-size: 20px;
   }
 
   .list__item-image {
-    width: 170px;
-    height: 170px;
-    margin: 10px 20px 10px 30px;
+    width: 250px;
+    height: 250px;
   }
 }
 
@@ -91,60 +87,21 @@
     margin-top: 30px;
   }
 
-  .list__item {
-    grid-template-columns: auto 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-    "img title"
-    "text text";
+  .list {
+    width: calc(100% - 40px);
   }
 
-  .list__item-image {
-    width: 150px;
-    height: 150px;
-    margin: 10px 20px;
+  .list__item {
+    width: 100%;
   }
 
   .list__item-title {
-    font-size: 20px;
-    margin: 10px 20px 10px 0;
-  }
-
-  .list__item-description {
-    margin: 0 30px 20px 20px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .list__item-text {
-    font-size: 12px;
+    font-size: 18px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .list__item {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
-    grid-template-areas:
-    "img"
-    "title"
-    "text";
-  }
-
   .list__item-image {
-    width: 200px;
-    height: 200px;
-    margin: 10px 0;
-    justify-self: center;
-  }
-
-  .list__item-title {
-    font-size: 20px;
-    margin: 5px 20px;
-    text-align: center;
-  }
-
-  .list__item-description {
-    margin: 0 20px 20px 20px;
+    width: 100%;
   }
 }
