--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,14 @@
 @import url(./blocks/services/services.css);
 @import url(./blocks/prices/prices.css);
 @import url(./blocks/promotions/promotions.css);
-@import url(./blocks/blog/blog.css);
+@import url(./blocks/work/work.css);
 @import url(./blocks/contacts/contacts.css);
 @import url(./blocks/map/map.css);
 @import url(./blocks/buttonUp/buttonUp.css);
 @import url(./blocks/footer/footer.css);
 
 * {
-  /* outline: 1px solid green; */
+  outline: 1px dashed grey;
   scroll-behavior: smooth;
   scroll-margin-top: 78px;
 }
