--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -1,6 +1,5 @@
 .work {
   width: 100%;
-  height: 100%;
   position: relative;
   flex: 1;
   z-index: 1;
@@ -13,11 +12,10 @@
 
 .work-container {
   width: 1100px;
-  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
 }
 
 .work-button {
@@ -51,6 +49,7 @@
 .work-list-container {
   width: calc(100% - 140px);
   overflow: hidden;
+  padding: 0 18px;
 }
 
 .work-list {
@@ -79,15 +78,14 @@
   will-change: transform;
   transform-origin: center center;
   transition: all .3s ease;
-  /* cursor: pointer; */
+  cursor: pointer;
   background-color: #999;
 }
 
-/* .list__item-image:hover {
+.work-list__item-image:hover {
   transform: scale(1.05);
-  opacity: 1;
   box-shadow: 0 0 5px 5px #AAA;
-} */
+}
 
 .work-list__item-title {
   margin: 0;
@@ -153,6 +151,10 @@
     width: 550px;
   }
 
+  .work-list-container {
+    width: calc(100% - 110px);
+  }
+
   .work-list {
     gap: 20px;
   }
@@ -179,16 +181,30 @@
 
 @media screen and (max-width: 510px) {
   .work-container {
-    width: calc(100% - 40px);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    width: 100%;
     justify-content: center;
-    gap: 20px;
+    gap: 0;
   }
 
   .work-list-container {
-    min-width: 150px;
-    width: 150px;
+    min-width: 200px;
+    width: 200px;
+    padding: 0 10px;
+  }
+
+  .work-button {
+    width: 30px;
+    height: 30px;
+  }
+
+  .work-list__item-image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .work-list__item-image:hover {
+    transform: scale(1.0);
+    opacity: 1;
+    box-shadow: 0 0 5px 5px #AAA;
   }
 }
