--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 2;
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,7 +22,7 @@
 .contacts__title {
   font-size: 26px;
   text-align: center;
-  margin: 20px 0 20px;
+  margin: 0 0 20px;
 }
 
 .contacts__work {
@@ -77,7 +77,6 @@
 }
 
 .contacts__connection {
-  text-decoration: none;
   color: #000;
   font-size: 14px;
   font-weight: 900;
@@ -134,11 +133,11 @@
 
 @media screen and (max-width: 600px) {
   .contacts {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .contacts__title {
-    margin: 20px;
+    margin: 0 20px 20px;
   }
 }
 
@@ -157,6 +156,5 @@
 @media screen and (max-width: 480px) {
   .contacts__title {
     font-size: 18px;
-    margin: 20px;
   }
 }
