--- a/src/blocks/promotions/promotions.css
+++ b/src/blocks/promotions/promotions.css
@@ -4,7 +4,7 @@
   position: relative;
   flex: 1;
   z-index: 1;
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,7 +12,6 @@
 }
 
 .list {
-  padding: 20px 0;
   width: calc(100% - 60px);
   max-width: 1280px;
   display: flex;
@@ -20,6 +19,7 @@
   justify-content: center;
   flex-wrap: wrap;
   margin: 0;
+  padding: 0;
   scroll-margin-top: 100px;
   gap: 30px;
 }
@@ -58,7 +58,7 @@
 .list__item-text {
   font-size: 14px;
   line-height: 17px;
-  margin: 8px 0;
+  margin: 0 0 16px;
 }
 
 @media screen and (max-width: 850px) {
@@ -80,7 +80,7 @@
 
 @media screen and (max-width: 600px) {
   .promotions {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .list {
