--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -3,7 +3,7 @@
   position: relative;
   flex: 1;
   z-index: 1;
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,6 +16,7 @@
   flex-direction: row;
   align-items: center;
   gap: 10px;
+  margin-top: -20px;
 }
 
 .work-button {
@@ -53,7 +54,7 @@
 }
 
 .work-list {
-  padding: 20px 0;
+  padding: 20px 0 0;
   display: flex;
   flex-direction: row;
   margin: 0;
@@ -101,7 +102,7 @@
 .work-list__item-text {
   font-size: 14px;
   line-height: 17px;
-  margin: 8px 0;
+  margin: 0 0 16px;
 }
 
 @media screen and (max-width: 1160px) {
@@ -122,7 +123,7 @@
 
 @media screen and (max-width: 1010px) {
   .work {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .work-container {
@@ -190,7 +191,6 @@
   .work-list-container {
     min-width: 200px;
     width: 200px;
-    padding: 0 10px;
   }
 
   .work-button {
