--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -43,7 +43,7 @@
   list-style: none;
   padding: 0;
   justify-content: center;
-  margin: 10px 0 30px;
+  margin: 20px 0 30px;
 }
 
 .contacts__master {
@@ -83,9 +83,11 @@
   border: solid 1px #000;
   border-radius: 8px;
   width: 180px;
-  height: 25px;
-  text-align: center;
-  padding-top: 8px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-top: 15px;
   transition: all .3s ease;
   will-change: transform;
@@ -125,9 +127,7 @@
 
   .contacts__connection {
     width: 150px;
-    height: 30px;
-    padding: 6px 0;
-    box-sizing: border-box;
+    height: 40px;
   }
 }
 
@@ -145,11 +145,11 @@
   .contacts__masters {
     flex-wrap: wrap;
     width: calc(100% - 40px);
-    margin: 0 auto;
+    margin: 20px auto;
   }
 
   .contacts__master {
-    margin: 0 0 30px 0;
+    margin: 0 0 20px 0;
   }
 }
 
