feat: сжать картинки по рекомендации Lighthouse

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -24,7 +24,8 @@
   color: #FFF;
   width: auto;
   padding: 0 30px 0 25px;
-  border-right: 1px solid grey;
+  /* убрать линии или нет */
+  /* border-right: 1px solid grey; */
   transition: opacity .3s ease;
   width: 272px;
 }
@@ -70,7 +71,8 @@
 
 .header__info {
   display: flex;
-  border-bottom: 1px solid grey;
+  /* убрать линии или нет */
+  /* border-bottom: 1px solid grey; */
   min-height: 44px;
 }
 
