--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -8,7 +8,7 @@
   justify-content: center;
   z-index: 1;
   margin-top: 30px;
-  background-color: #EEE;
+  background-color: #FFF;
   padding-bottom: 10px;
 }
 
