--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -7,9 +7,7 @@
   left: 0;
   opacity: 0;
   pointer-events: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
   transition: .5s all ease;
   z-index: 4;
 }
@@ -17,6 +15,9 @@
 .popup_opened {
   pointer-events: all;
   opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .popup__container {
