--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -86,6 +86,9 @@
   justify-content: center;
   transition: all .3s ease;
   cursor: pointer;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 .work-list__layout:hover {
