--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -21,15 +21,17 @@
 }
 
 .prices__title {
-  font-size: 26px;
+  font-size: 20px;
   line-height: 30px;
   font-weight: 900;
-  height: 30px;
+  height: 35px;
+  width: 300px;
   border: none;
   border-radius: 8px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  justify-content: center;
   transition: .1s ease;
   scroll-margin-top: 100px;
 }
@@ -49,12 +51,12 @@
   background-size: 15px;
   background-repeat: no-repeat;
   z-index: 2;
-  rotate: 180deg;
+  transform: rotate(180deg);
   margin: 10px;
 }
 
 .prices__title-check_clicked {
-  rotate: 0deg;
+  transform: rotate(0deg);
 }
 
 .prices__table-container {
@@ -96,7 +98,9 @@
   }
 
   .prices__title {
-    font-size: 22px;
+    font-size: 18px;
+    height: 40px;
+    width: 300px;
   }
 }
 
@@ -107,8 +111,9 @@
   }
 
   .prices__title {
-    font-size: 20px;
     scroll-margin-top: 115px;
+    font-size: 16px;
+    width: 250px;
   }
 
   .prices__table {
