--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -77,27 +77,28 @@
 }
 
 .header__reception {
-  color: #FFF;
   display: flex;
   margin: 0 auto 0 30px;
-  transition: .3s ease;
   align-items: center;
-  font-size: 14px;
 }
 
-.header__reception-container {
+.header__reception-button {
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-
-.header__reception:hover {
-  opacity: .7;
-}
-
-.header__reception-text {
+  justify-content: center;
+  color: #FFF;
+  background-color: #000;
+  border: none;
+  cursor: pointer;
+  padding: 0;
   font-size: 14px;
   margin: 0;
+  transition: .3s ease;
+}
+
+.header__reception-button:hover {
+  opacity: .7;
 }
 
 .header__reception-icon {
@@ -173,12 +174,8 @@
     margin: 0 0 0 20px;
   }
 
-  .header__reception-container {
+  .header__reception-button {
     flex-direction: row-reverse;
-  }
-
-  .header__reception-text {
-    margin-bottom: 0;
   }
 
   .header__reception-icon {
@@ -219,7 +216,7 @@
     height: 52px;
   }
 
-  .header__reception-container {
+  .header__reception-button {
     flex-direction: row;
   }
 
@@ -257,7 +254,7 @@
     margin: 0 10px 0 0;
   }
 
-  .header__reception-container {
+  .header__reception-button {
     flex-direction: row-reverse;
   }
 
