--- a/src/blocks/navigation/navigation.css
+++ b/src/blocks/navigation/navigation.css
@@ -1,3 +1,10 @@
+.navigation {
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .navigation__button-menu {
   display: none;
 }
@@ -8,8 +15,7 @@
 	justify-content: space-between;
   align-items: center;
   padding: 0 25px;
-	margin: 7.5px 0;
-  height: 18px;
+	margin: 0;
 }
 
 .navigation__link {
