--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -1,23 +1,30 @@
 .prices {
+  display: none;
+}
+
+.prices_visible {
   width: 100%;
   height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   z-index: 1;
-  margin-top: 30px;
   background-color: #FFF;
-  padding-bottom: 10px;
+  border-radius: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.prices__type-work {
+.prices__work {
+  display: none;
+}
+
+.prices__work_visible {
   display: flex;
   width: 100%;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 .prices__title {
@@ -36,29 +43,6 @@
   scroll-margin-top: 100px;
 }
 
-.prices__title:hover {
-  cursor: pointer;
-  transform: scale(1.02);
-}
-
-.prices__title-check {
-  width: 22px;
-  height: 22px;
-  opacity: .5;
-  transition: .3s ease;
-  background-image: url(../../images/back-img.png);
-  background-position: center;
-  background-size: 15px;
-  background-repeat: no-repeat;
-  z-index: 2;
-  transform: rotate(180deg);
-  margin: 10px;
-}
-
-.prices__title-check_clicked {
-  transform: rotate(0deg);
-}
-
 .prices__table-container {
   overflow: hidden;
 }
@@ -68,24 +52,17 @@
   margin: 0;
   width: 500px;
   margin-bottom: 10px;
-  transition: .3s ease;
-  transform: translateY(-110%);
-  height: 0;
-}
-
-.prices__table_visible {
-  transform: translateY(0);
-  height: 100%;
 }
 
 .prices__table-name {
   font-size: 14px;
   line-height: 17px;
   display: grid;
-  grid-template-columns: 355px 120px;
+  grid-template-columns: 315px 120px;
   column-gap: 20px;
   border-bottom: 1px solid #000;
-  padding: 10px 5px 2px;
+  padding: 8px 5px 5px;
+  margin: 0 20px;
 }
 
 .prices__table-name_head {
@@ -93,26 +70,13 @@
 }
 
 @media screen and (max-width: 800px) {
-  .prices__type-work {
+  .prices__work {
     margin-bottom: 10px;
   }
 
   .prices__title {
     font-size: 18px;
     height: 40px;
-    width: 300px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .prices {
-    margin-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .prices__title {
-    scroll-margin-top: 115px;
-    font-size: 16px;
     width: 250px;
   }
 
@@ -123,6 +87,6 @@
   .prices__table-name {
     margin: 0 20px;
     grid-template-columns: 3fr 1fr;
-    padding: 8px 5px 2px;
+    padding: 5px 5px 3px;
   }
 }
