--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -9,7 +9,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #FFF;
 }
 
 .contacts__container {
@@ -17,12 +16,22 @@
   max-width: 1280px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 0 0 30px;
 }
 
 .contacts__title {
   font-size: 26px;
   text-align: center;
   margin: 0 0 20px;
+}
+
+.contacts__container-work {
+  border: 1px solid #AAA;
+  width: 250px;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #FFF;
 }
 
 .contacts__work {
@@ -32,9 +41,19 @@
   margin-bottom: 10px;
 }
 
+.contacts__work span {
+  font-size: 14px;
+  margin-left: 20px;
+  border: 1px solid #AAA;
+  background-color: #DDD;
+  padding: 0 7px;
+}
+
 .contacts__work:first-of-type {
-  font-size: 18px;
+  font-size: 22px;
+  line-height: 27px;
   font-weight: 900;
+  margin-bottom: 20px;
 }
 
 .contacts__masters {
@@ -50,6 +69,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid #AAA;
+  border-radius: 20px;
+  background-color: #FFF;
 }
 
 .contacts__photo {
@@ -80,20 +102,17 @@
   color: #000;
   font-size: 14px;
   font-weight: 900;
-  border: solid 1px #000;
-  border-radius: 8px;
-  width: 180px;
+  border: none;
+  width: 100%;
   height: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 15px;
+  margin: 5px 0 15px;
   transition: all .3s ease;
-  will-change: transform;
   cursor: pointer;
-  background-color: #FFF;
-  box-sizing: border-box;
+  background: none;
 }
 
 .contacts__connection:hover {
@@ -152,6 +171,15 @@
 
   .contacts__master {
     margin: 0 0 20px 0;
+  }
+
+  .contacts__work:first-of-type {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .contacts__container-work {
+    width: 200px;
   }
 }
 
