--- a/src/blocks/map/map.css
+++ b/src/blocks/map/map.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  background-color: #FFF;
 }
 
 .map__container {
@@ -15,6 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 30px;
 }
 
 .map__title {
