--- a/src/blocks/about-as/about-as.css
+++ b/src/blocks/about-as/about-as.css
@@ -9,8 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #FFF;
-  border-radius: 20px;
+  background-color: rgba(250, 250, 250, 0.9);
   padding: 20px 0;
 }
 
