--- a/src/blocks/map/map.css
+++ b/src/blocks/map/map.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background-color: #FFF;
+  background-color: rgba(250, 250, 250, 0.9);
 }
 
 .map__container {
