--- a/src/blocks/navigation/navigation.css
+++ b/src/blocks/navigation/navigation.css
@@ -47,7 +47,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    background-color: #FFF;
+    background-color: rgba(250, 250, 250, 1);
     z-index: 3;
     transition: right .3s ease;
   }
