--- a/src/blocks/prices/prices.css
+++ b/src/blocks/prices/prices.css
@@ -1,8 +1,4 @@
 .prices {
-  display: none;
-}
-
-.prices_visible {
   width: 100%;
   height: 100%;
   flex: 1;
@@ -10,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   z-index: 1;
-  background-color: #FFF;
+  background-color: rgba(250, 250, 250, 1);
   border-radius: 20px;
   overflow-y: auto;
   overflow-x: hidden;
