--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -70,6 +70,10 @@
   width: 300px;
   gap: 30px;
   position: relative;
+  border: 1px solid #AAA;
+  border-radius: 20px;
+  background-color: rgba(250, 250, 250, .9);
+  box-sizing: content-box;
 }
 
 .work-list__layout {
@@ -110,7 +114,7 @@
   border: 2px #FFF solid;
   border-radius: 10px;
   padding: 15px;
-  background-color: rgba(0, 0, 0, .8);;
+  background-color: rgba(0, 0, 0, .8);
 }
 
 .work-list__layout:hover .work-list__layout-text {
