--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 @import url(./blocks/prices/prices.css);
 @import url(./blocks/promotions/promotions.css);
 @import url(./blocks/work/work.css);
+@import url(./blocks/spares/spares.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/contacts/contacts.css);
 @import url(./blocks/map/map.css);
