--- a/src/blocks/about-as/about-as.css
+++ b/src/blocks/about-as/about-as.css
@@ -10,14 +10,14 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(250, 250, 250, 0.9);
-  padding: 20px 0;
   border-radius: 20px;
+  padding: 10px 0 40px;
 }
 
 .about-as__title {
   font-size: 26px;
   text-align: center;
-  margin: 0 0 10px;
+  margin: 26px 0;
 }
 
 .about-as__tagets {
@@ -27,9 +27,29 @@
 
 .about-as__taget {
   font-size: 14px;
-  line-height: 18px;
-  margin: 17px;
+  line-height: 20px;
+  margin: 0 17px 17px;
   font-weight: 500;
+}
+
+.about-as__link-rating {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: .3s ease;
+  border-radius: 20px;
+}
+
+.about-as__link-rating:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 5px 5px #AAA;
+}
+
+.about-as__rating {
+  width: 450px;
+  height: 71px;
+  border-radius: 20px;
+  border: 1px solid #AAA;
 }
 
 @media screen and (max-width: 700px) {
@@ -49,13 +69,31 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .about-as__title {
-    font-size: 20px;
-    margin: 0;
+    font-size: 22px;
+    margin: 22px 0;
   }
 
   .about-as__tagets {
     padding: 0 20px;
+  }
+
+  .about-as__link-rating {
+    border-radius: 0;
+  }
+
+  .about-as__link-rating:hover {
+    transform: scale(1);
+    box-shadow: 0 0 5px 5px #AAA;
+  }
+
+  .about-as__rating {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    border: none;
+    border-top: 1px solid #AAA;
+    border-bottom: 1px solid #AAA;
   }
 }
