--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -44,18 +44,33 @@
 
 .footer__social {
   margin-right: 30px;
+  display: flex;
+  flex-direction: row;
 }
 
 .footer__social-icon {
-  background-image: url(../../images/logo-vk.png);
+
   background-repeat: no-repeat;
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
   background-size: contain;
   outline: none;
   border: none;
   transition: .3s ease;
   opacity: .5;
+  margin-left: 10px;
+}
+
+.footer__social-icon_vk {
+  background-image: url(../../images/logo-vk.png);
+}
+
+.footer__social-icon_telegram {
+  background-image: url(../../images/logo-telegram.png);
+}
+
+.footer__social-icon_avito {
+  background-image: url(../../images/logo-avito.png);
 }
 
 .footer__social-icon:hover {
@@ -78,12 +93,12 @@
 }
 
 @media screen and (max-width: 400px) {
+  .footer {
+    height: 60px;
+  }
+
   .footer__copywriting {
     display: flex;
     flex-direction: column;
-  }
-
-  .footer__copywriting_author {
-    margin-left: 11px;
   }
 }
