--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 30px;
 }
 
 .work-container {
@@ -50,7 +51,7 @@
 .work-list-container {
   width: calc(100% - 140px);
   overflow: hidden;
-  padding: 0 18px;
+  padding: 0 15px;
 }
 
 .work-list {
@@ -73,7 +74,7 @@
   border: 1px solid #AAA;
   border-radius: 20px;
   background-color: rgba(250, 250, 250, .9);
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 .work-list__layout {
@@ -153,8 +154,11 @@
   }
 
   .work-list-container {
-    width: 90%;
-    overflow: hidden;
+    width: 810px;
+  }
+
+  .work-list__item {
+    width: 250px;
   }
 
   .work-list__layout {
@@ -176,11 +180,16 @@
     width: 770px;
   }
 
+  .work-list-container {
+    width: 640px;
+  }
+
   .work-list {
     gap: 20px;
   }
 
   .work-list__item {
+    width: 200px;
     gap: 20px;
   }
 
@@ -204,7 +213,7 @@
   }
 
   .work-list-container {
-    width: calc(100% - 110px);
+    width: 420px;
   }
 
   .work-list {
@@ -219,6 +228,14 @@
 @media screen and (max-width: 760px) {
   .work-container {
     width: 450px;
+  }
+
+  .work-list-container {
+    width: 320px;
+  }
+
+  .work-list__item {
+    width: 150px;
   }
 
   .work-list__item-title {
@@ -243,7 +260,10 @@
   }
 
   .work-list-container {
-    min-width: 200px;
+    width: 200px;
+  }
+
+  .work-list__item {
     width: 200px;
   }
 
