--- a/src/blocks/about-as/about-as.css
+++ b/src/blocks/about-as/about-as.css
@@ -36,13 +36,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: .3s ease;
+  transition: .1s ease;
   border-radius: 20px;
 }
 
 .about-as__link-rating:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px 5px #AAA;
+  transform: scale(1.02);
+  box-shadow: 0 0 10px 0px #000;
 }
 
 .about-as__rating {
@@ -85,7 +85,7 @@
 
   .about-as__link-rating:hover {
     transform: scale(1);
-    box-shadow: 0 0 5px 5px #AAA;
+    box-shadow: 0 0 10px 0px #000;
   }
 
   .about-as__rating {
