--- a/src/blocks/promotions/promotions.css
+++ b/src/blocks/promotions/promotions.css
@@ -49,7 +49,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all .3s ease;
+  transition: .1s ease;
   cursor: pointer;
   border: none;
   margin: 0;
@@ -57,14 +57,13 @@
 }
 
 .list__item-layout:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px 5px #AAA;
+  transform: scale(1.02);
+  box-shadow: 0 0 10px 0px #000;
   background-color: rgba(0, 0, 0, .0);
 }
 
 .list__item-layout:hover~.list__item-image {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px 5px #AAA;
+  transform: scale(1.02);
 }
 
 .list__item-layout-text {
@@ -89,7 +88,7 @@
   object-fit: cover;
   will-change: transform;
   transform-origin: center center;
-  transition: all .3s ease;
+  transition: .1s ease;
   background-color: #999;
 }
 
