--- a/src/blocks/work/work.css
+++ b/src/blocks/work/work.css
@@ -33,7 +33,7 @@
   margin: 0;
   padding: 0;
   cursor: pointer;
-  transition: .3s ease;
+  transition: .1s ease;
 }
 
 .work-button:hover {
@@ -89,7 +89,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all .3s ease;
+  transition: all .1s ease;
   cursor: pointer;
   border: none;
   margin: 0;
@@ -97,14 +97,13 @@
 }
 
 .work-list__layout:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px 5px #AAA;
+  transform: scale(1.02);
+  box-shadow: 0 0 10px 0px #000;
   background-color: rgba(0, 0, 0, .0);
 }
 
 .work-list__layout:hover ~ .work-list__item-image {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px 5px #AAA;
+  transform: scale(1.02);
 }
 
 .work-list__layout-text {
@@ -129,7 +128,7 @@
   object-fit: cover;
   will-change: transform;
   transform-origin: center center;
-  transition: all .3s ease;
+  transition: all .1s ease;
   background-color: #999;
 }
 
@@ -279,11 +278,5 @@
   .work-list__item-image {
     width: 200px;
     height: 200px;
-  }
-
-  .work-list__item-image:hover {
-    transform: scale(1.0);
-    opacity: 1;
-    box-shadow: 0 0 5px 5px #AAA;
   }
 }
