--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -46,6 +46,7 @@
   margin-right: 30px;
   display: flex;
   flex-direction: row;
+  gap: 10px;
 }
 
 .footer__social-icon {
@@ -58,7 +59,6 @@
   border: none;
   transition: .1s ease;
   opacity: .5;
-  margin-left: 10px;
 }
 
 .footer__social-icon_vk {
